--- a/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
+++ b/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Popule body date
         id: body
         run: |
-          data=${{steps.date.outputs.date}}
-          old_body=${{steps.date.outputs.date}}
+          data='${{steps.date.outputs.date}}'
+          old_body='${{steps.date.outputs.date}}'
           new_body=$(echo $old_body | sed -e "s/{{data}}/$data/")
           echo "::set-output name=body::$new_body
           
