--- a/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
+++ b/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
@@ -64,7 +64,7 @@ jobs:
           data='${{steps.date.outputs.date}}'
           old_body='${{steps.date.outputs.date}}'
           new_body=$(echo $old_body | sed -e "s/{{data}}/$data/")
-          echo "::set-output name=body::$new_body
+          echo "::set-output name=body::$new_body"
           
       - name: Create meeting issue
         uses: imjohnbo/issue-bot@v3
