--- a/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
+++ b/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Popule body date
         id: body
         run: |
-          data='${{steps.date.outputs.date}}'
-          old_body='${{steps.extract.outputs.body}}'
+          data="${{steps.date.outputs.date}}"
+          old_body="${{steps.extract.outputs.body}}"
           new_body=$(echo $old_body | sed -e "s/{{data}}/$data/")
           echo "::set-output name=body::$new_body"
           
@@ -72,6 +72,7 @@ jobs:
           assignees: ${{ steps.extract.outputs.assignees }}
           labels: ${{ steps.extract.outputs.labels }}
           title: "[Reunião] Geral: ${{ steps.date.outputs.date }}"
-          body: ${{ steps.body.outputs.body }}
+          body: "${{ steps.body.outputs.body }}"
+          project: ${{ steps.extract.outputs.project }}
           pinned: false
           close-previous: false
